# chronos-rb

./: .gitignore  .gitmodules  CLAUDE.md  README.md
Auto Run Docs/: Phase-01-KiCad-Project-Setup.md  Phase-02-Signal-Conditioning-Circuits.md  Phase-03-Power-Supply-Design.md  Phase-04-Pico-Interface-and-Connectors.md  Phase-05-PCB-Layout-Manufacturing.md
docs/: .~lock.CHRONOS-Rb_Hardware_Guide.docx#  CHRONOS-Rb_Hardware_Guide.docx  create_documentation.js  create_documentation_v2.js  package-lock.json
firmware/: CMakeLists.txt  flash.sh  ota.sh
firmware/include/: ac_freq_monitor.h  chronos_rb.h  cli.h  config.h  gnss_input.h  gps_input.h  gptp.h  irig_b.h  log_buffer.h  lwipopts.h  nmea_output.h  nts.h  ota_update.h  pps_generator.h  pulse_output.h  radio_timecode.h  roughtime.h  time_protocol.h
firmware/src/: ac_freq_monitor.c  cli.c  config.c  freq_counter.c  freq_counter.pio  gnss_input.c  gps_input.c  gptp.c  irig_b.c  log_buffer.c  main.c  nmea_output.c  ntp_server.c  nts.c  ota_update.c  pps_capture.c  pps_capture.pio  pps_generator.c  pps_generator.pio  ptp_server.c  pulse_interval_pio.pio  pulse_output.c  pulse_pio.pio  radio_timecode.c  roughtime.c  rubidium_sync.c  time_discipline.c  time_protocol.c  web_interface.c  wifi_manager.c
hardware/kicad/: README.md  chronos_rb.kicad_pro  chronos_rb.kicad_sch  connectors.kicad_sch  fp-lib-table  pico_interface.kicad_sch  power_supply.kicad_sch  signal_conditioning.kicad_sch  sym-lib-table
hardware/kicad/symbols/: chronos_rb.kicad_sym
